syntax = "proto3";
package relayer.provers.lcp.config;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/datachainlab/lcp-go/relay";
option (gogoproto.goproto_getters_all) = false;

message ProverConfig {
    google.protobuf.Any origin_prover = 1;
    // hex string
    string lcp_service_address = 2;
    // unit: seconds
    uint64 lcp_service_dial_timeout = 3;
    // hex string
    string mrenclave = 4;
    repeated string allowed_quote_statuses = 5;
    repeated string allowed_advisory_ids = 6;
    // unit: seconds
    uint64 key_expiration = 7;
    // unit: seconds, buffer time before expiration to proactively update the enclave key
    uint64 key_update_buffer_time = 8;
    string elc_client_id = 9;
    bool message_aggregation = 10;
    uint64 message_aggregation_batch_size = 11;
    bool is_debug_enclave = 12;

    // --- Operator Config --- //
    // if empty, any operator is allowed (default)
    // otherwise, only operators in this list are allowed
    repeated string operators = 13;
    // this only works when operators is not empty
    // the value must be less than or equal to 1
    Fraction operators_threshold = 14 [(gogoproto.nullable) = false];
    // signer for eip712 commitment
    google.protobuf.Any operator_signer = 15;
    uint32 current_tcb_evaluation_data_number = 16;
    uint32 tcb_evaluation_data_number_update_grace_period = 17;
    // zkvm config
    oneof zkvm_config {
        Risc0ZKVMConfig risc0_zkvm_config = 18;
    }
    // eip712 params
    oneof operators_eip712_params {
        EIP712EVMChainParams operators_eip712_evm_chain_params = 31;
        EIP712CosmosChainParams operators_eip712_cosmos_chain_params = 32;
    }

    // max chunk size(byte) for update client
    uint32 max_chunk_size_for_update_client = 33;
}

message Fraction {
    uint64 numerator = 1;
    uint64 denominator = 2;
}

message Risc0ZKVMConfig {
    string image_id = 1;
    bool mock = 2;
}

message EIP712EVMChainParams {
    uint64 chain_id = 1;
    string verifying_contract_address = 2;
}

message EIP712CosmosChainParams {
    string chain_id = 1;
    string prefix = 2;
}
